--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-langchain = "==0.1.16"
-openai = "==1.21.2"
-langchain-openai = "==0.1.3"
-langchain-community = "==0.0.33"
+langchain = "==0.2.12" # 0.1.16
+#openai = "==1.21.2"
+langchain-openai = "==0.1.20" # 0.1.3
+langchain-community = "==0.2.11"
 python-dotenv = "==1.0.0"
 tiktoken = "*"
 chromadb = "*"
