--- a/Pipfile
+++ b/Pipfile
@@ -33,6 +33,8 @@ langchain-ollama = "*"
 langchain-huggingface = "*"
 flashrank = "*"
 wikipedia = "*"
+ipython = "*"
+tavily-python = "*"
 
 [dev-packages]
 
