--- a/Pipfile
+++ b/Pipfile
@@ -39,6 +39,10 @@ langchain-experimental = "*"
 flagembedding = "*"
 peft = "*"
 pytesseract = "*"
+transformers = "*"
+einops = "*"
+ninja = "*"
+flash-attn = "*"
 
 [dev-packages]
 
