--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,20 @@
-[[source]]
-url = "https://pypi.org/simple"
-verify_ssl = true
-name = "pypi"
+[tool.poetry]
+name = "langchain-sample"
+version = "0.0.1"
+description = "langchain-sample"
+authors = ["rudaks <rudaks94@gmail.com>"]
+license = "MIT"
+readme = "README.md"
+package-mode = false
 
-[packages]
-langchain = "==0.3.2" # 0.1.16
+[tool.poetry.dependencies]
+python = ">=3.12,<3.13"
+
+langchain = "0.3.2" # 0.1.16
 #openai = "==1.21.2"
-langchain-openai = "==0.2.2" # 0.1.3
-langchain-community = "==0.3.1"
-python-dotenv = "==1.0.0"
+langchain-openai = "0.2.2" # 0.1.3
+langchain-community = "0.3.1"
+python-dotenv = "1.0.0"
 tiktoken = "*"
 chromadb = "*"
 black = "*"
@@ -72,7 +78,6 @@ ultralyticsplus = "*"
 ultralytics = "*"
 
 
-[dev-packages]
-
-[requires]
-python_version = "3.12"
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
